--- a/Validated.xcodeproj/xcshareddata/xcschemes/Validated_macOS.xcscheme
+++ b/Validated.xcodeproj/xcshareddata/xcschemes/Validated_macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Validated::Validated"
+               BlueprintIdentifier = "NT_46EC7BB02534E219BD78AD1B67ADECEA"
                BuildableName = "Validated.framework"
-               BlueprintName = "Validated"
+               BlueprintName = "Validated_macOS"
                ReferencedContainer = "container:Validated.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,20 +26,30 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Validated::ValidatedTests"
+               BlueprintIdentifier = "NT_24A620DD29F4BBC27F8DE9301D3BAF84"
                BuildableName = "ValidatedTests.xctest"
-               BlueprintName = "ValidatedTests"
+               BlueprintName = "ValidatedTests_macOS"
                ReferencedContainer = "container:Validated.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "NT_46EC7BB02534E219BD78AD1B67ADECEA"
+            BuildableName = "Validated.framework"
+            BlueprintName = "Validated_macOS"
+            ReferencedContainer = "container:Validated.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <CommandLineArguments>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -56,12 +66,14 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Validated::Validated"
+            BlueprintIdentifier = "NT_46EC7BB02534E219BD78AD1B67ADECEA"
             BuildableName = "Validated.framework"
-            BlueprintName = "Validated"
+            BlueprintName = "Validated_macOS"
             ReferencedContainer = "container:Validated.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <CommandLineArguments>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -71,6 +83,18 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "NT_46EC7BB02534E219BD78AD1B67ADECEA"
+            BuildableName = "Validated.framework"
+            BlueprintName = "Validated_macOS"
+            ReferencedContainer = "container:Validated.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <CommandLineArguments>
+      </CommandLineArguments>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
